2005-03-25 Werner Hoch <werner.ho@gmx.de>
	* src/project.c: added file check, geda hang if theres no file
	  selection or selection is a directory (Bug #156)

2005-03-19 Werner Hoch <werner.ho@gmx.de>

	* po/de_DE.po, po/LINGUAS: added german translation

	* src/main.c, src/support.h: fixed encoding problem with UTF-8
	charactors

2005-03-13 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Removed all tests for gtk+ 1.2.x and fixed error 
        message if gtk+ 2.2.x is not found.

	* src/tool.c: Commented out enum which was unused and caused a 
	seg fault for certain users.  Probably because there isn't an
	equivalent entry in the ExtList data structure.

2005-03-10 22:32  Dan McMahill <danmc>

	* configure.ac: add dmalloc and Electric Fence debugging support.

2005-03-08 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version to 20050313

2005-02-21 14:18  Dan McMahill <danmc>

	* graphman/Makefile.am, src/Makefile.am: add -g -O that I managed
	  to drop by mistake

2005-02-21 05:36  Dan McMahill <danmc>

	* configure.ac, graphman/Makefile.am, src/Makefile.am:
	  conditionalize the use of lots of gcc specific compiler flags on
	  the compiler actually being gcc.  Should give this a chance with
	  non-gcc compilers.

2005-02-21 03:58  Dan McMahill <danmc>

	* autogen.sh: avoid using the '-path' primary to find(1) as it's an
	  extension to posix.2 and is not supported on some operating
	  systems such as solaris.  Now we can autogen.sh on solaris 9.

2005-02-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* geda/po/it.po, LINGUAS: Added new updated Italian translation by
	Marco Colombo.  Thanks.  (renamed it_IT.po translation to it.po).

2005-02-12 22:06  Dan McMahill <danmc>

	* graphman/Makefile.am, graphman/callbacks.c, graphman/config.c,
	  graphman/config.h, graphman/configfile.c, graphman/configfile.h,
	  graphman/export2gwave.c, graphman/filetool.c, graphman/graph.c,